Fixed footer logo and text alignment.

--- a/css/keynote.css
+++ b/css/keynote.css
@@ -150,19 +150,21 @@ dt, pre {
     position: fixed;
     bottom: 0;
     width: 100%;
+
     height: 30px;
+    /* vertically center a small amount of text */
+    line-height: 30px;
+
     z-index: 4;
     background: #000;
-    border-top: 1px solid #ccc;
+    border-top: 1px solid #aaa;
     padding-top: 0.35em;
 
     font-size: 50%;
     text-transform: uppercase;
     color: #fff;
 
-    background: #111 no-repeat center left;
-    background-image: url("assets/logo.png");
-
+    background: #111 url("assets/logo.png") no-repeat 0 95%;
 }
 
 .yui3-js-enabled #ft {
@@ -170,9 +172,8 @@ dt, pre {
 }
 
 #ft p, #ft a {
-    display: block;
     float: left;
-    padding: 0 10px;
+    padding: 0 10px 0 0;
 }
 
 #ft p.credit {
